# bloom

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  improvements.md  modifier_pipeline_explainer.txt
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
assets/logo/: bloom.af  gen_images.py
docs/: CNAME  docs.html  index.html  style.css
docs/guide/: build.html  editing.html  export.html  formats.html  getting-started.html  guide.js  index.html  info-panel.html  install.html  modifiers.html  mouse.html  preferences.html  search-index.json  shortcuts.html  themes.html
scripts/: setup-av.ps1  setup-av.sh  setup-ffmpeg.ps1  setup-ffmpeg.sh  setup-heif.ps1  setup-heif.sh  setup-video.ps1  setup-video.sh
src/: app.rs  clipboard.rs  config.rs  constants.rs  easing.rs  export.rs  gallery.rs  keybinds.rs  main.rs  modifier_cpu.rs  modifiers.rs  styles.rs  tasks.rs  ui.rs  video_export.rs
src/app/: edit.rs  mod.rs  transport.rs
src/components/: bottom_bar.rs  edit_column.rs  edit_panel.rs  info_column.rs  info_panel.rs  mod.rs  modifier_stack.rs  notifications.rs  preferences.rs  timeline_bar.rs  tool_bar.rs  viewer.rs
src/comps/: bottom_row.rs  main_panel.rs  mod.rs
src/edit/: mod.rs  nodes.rs  undo.rs
src/export/: image.rs  mod.rs  raster.rs  video.rs
src/modifiers/: cpu.rs  drawing_raster.rs  gpu.rs  kinds.rs  mod.rs  pixel_sort.rs  roi.rs  text_raster.rs  text_render.rs  types.rs
src/modifiers/kinds/: brightness_contrast.rs  chromatic_aberration.rs  color_balance.rs  crop.rs  drawing.rs  duotone.rs  exposure.rs  gaussian_blur.rs  grain.rs  grayscale.rs  halftone.rs  hue_saturation.rs  invert.rs  levels.rs  mod.rs  motion_blur.rs  pixel_sort.rs  posterize.rs  radial_blur.rs  sepia.rs  solarize.rs  temperature.rs  text.rs  threshold.rs  vibrance.rs  vignette.rs
src/wgpu/: edit_pipeline.rs  error.rs  gpu.rs  image_data.rs  lanczos_build.rs  mod.rs  modifier_pipeline.rs  pipeline.rs  primitive.rs  program.rs  scale.rs  tiled_source.rs  view_pipeline.rs  view_primitive.rs  view_program.rs
src/wgpu/media/: animation.rs  audio.rs  exif_data.rs  image_data.rs  mod.rs  video.rs
src/wgpu/modifier_pipeline/: blur.rs  executor.rs  geom.rs  goldens.rs  mod.rs  slab.rs  sort.rs  tiled.rs
src/wgpu/passes/: checkerboard.rs  chromatic_aberration.rs  display.rs  drawing.rs  gaussian_blur.rs  lanczos.rs  mod.rs  motion_blur.rs  pixel_grid.rs  pixel_sort.rs  text.rs
src/wgpu/shader/: blit.wgsl  lanczos3.wgsl  lanczos_h.wgsl  lanczos_v.wgsl  simple.wgsl
src/wgpu/shaders/: blit.wgsl  checkerboard.wgsl  chromatic_aberration.wgsl  combined_modifiers.wgsl  display.wgsl  drawing.wgsl  edit_brightness_contrast.wgsl  edit_crop.wgsl  edit_curves.wgsl  edit_hue_saturation.wgsl  gaussian_blur.wgsl  lanczos_h.wgsl  lanczos_v.wgsl  motion_blur.wgsl  motion_blur_compute.wgsl  pixel_grid.wgsl  pixel_sort_compute.wgsl  pixel_sort_diagonal.wgsl  text.wgsl  text_sdf.wgsl
src/widgets/: angle_dial.rs  color_swatch.rs  context_menu.rs  crop_overlay.rs  draw_overlay.rs  field_editor.rs  font_picker.rs  histogram.rs  hover_row.rs  loading_spinner.rs  logo_bloom.rs  menu.rs  menu_button.rs  mod.rs  modifier_picker.rs  number_entry.rs  scale_entry.rs  slide_in.rs  text_overlay.rs  theme_picker.rs  timeline.rs  value_slider.rs  viewport_nav.rs
wix/: License.rtf  main.wxs
