[package]
name = "bloomview"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["Marco Todorov"]
description = "A hardware accelerated image viewer"
homepage = "https://github.com/nnmarcoo/bloom"
repository = "https://github.com/nnmarcoo/bloom"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["image", "viewer", "gpu", "media", "gui"]
categories = ["multimedia::images", "multimedia::video", "gui"]
exclude = [
    "assets/demo/**",
    "assets/logo/banner.png",
    "assets/logo/installer_banner.bmp",
    "assets/logo/installer_dialog.bmp",
    "assets/logo/gen_images.py",
    "assets/logo/bloom.af",
    "assets/logo/bloom.svg",
    "wix/**",
    "scripts/**",
    ".github/**",
]

[[bin]]
name = "bloom"
path = "src/main.rs"

[package.metadata.wix]
eula = false

[dependencies]
# UI
iced = { version = "0.14.0", features = ["canvas", "advanced", "svg", "tokio", "image"] }
cosmic-text = "0.15.0"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# GPU / math
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.0", features = ["bytemuck"] }

# Image decoding
# TODO: file-format for magic-byte detection (would fix APNG misnamed as .png and other)
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "tiff", "webp", "bmp", "ico", "qoi", "pnm", "tga", "ff", "hdr", "exr"] }
gif = { version = "0.14.1", default-features = false, features = ["std", "raii_no_panic", "color_quant"] }
gif-dispose = "6.0.0"
rgb = "0.8.53"
image-webp = "0.2.4"
jxl-oxide = "0.12.5"
jpeg2k = { version = "0.10.1", default-features = false, features = ["threads", "file-io", "openjpeg-sys"] }
zune-psd = "0.5.1"
zune-core = "0.5.1"
icns = "0.4.0"
dicom-object = "0.9.0"
dicom-pixeldata = { version = "0.9.0", features = ["image", "openjpeg-sys"] }
ktx2 = "0.4.0"
basis-universal = "0.3.1"
dds = "0.2.0"
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
zstd = { version = "0.13.3", default-features = false }
xcf-rs = "0.5.0"
fitsrs = "0.4.1"

# SVG
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"

rayon = "1.11.0"
futures = "0.3"
png = "0.17"

# EXIF metadata
kamadak-exif = "0.6.1"

# System
arboard = { version = "3.6.1", default-features = false, features = ["image-data", "wayland-data-control"] }
rfd = "0.17.2"
open = { version = "5.3.6", features = ["shellexecute-on-windows"] }

libheif-rs = { version = "2", default-features = false, features = ["v1_17"], optional = true }

# A/V (optional)
ffmpeg-next = { version = "8", optional = true }
cpal = { version = "0.16", optional = true }
ringbuf = { version = "0.4", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

# Config persistence
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
dirs = "6.0.0"
rawler = "0.7.2"
fdsm = "0.8.0"
fdsm-ttf-parser = "0.2.0"
ttf-parser = "0.25"
nalgebra = "0.34"

[features]
heif = ["dep:libheif-rs"]
av = ["dep:ffmpeg-next", "dep:cpal", "dep:ringbuf", "dep:crossbeam-channel"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
# Small binary, but a panic in a third-party decoder aborts the app instead of
# becoming a graceful load error. Fix: patch/replace the decoder, or drop abort
# + catch_unwind in load_media.
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
